<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".StatsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/stats"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/Correct"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/progresspercentage"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/resultprogressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="60dp" />

            <TextView
                android:id="@+id/trytext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="70dp"
                android:gravity="center"
                android:text="@string/tryAgain" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/quit"
                    android:layout_width="116dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:background="@android:color/holo_green_dark"
                    android:text="@string/quit" />

                <Button
                    android:id="@+id/tryagain"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:background="@android:color/holo_green_dark"
                    android:text="@string/again" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>